fix: add react version to eslint (#4)

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "**/src/**/*.{js,jsx,ts,tsx}": "eslint"
   },
   "workspaces": [
-    "apps/*"
+    "apps/mobile/*",
+    "apps/web/*"
   ]
 }
