--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,7 @@
 {
-  "packages": ["apps/web", "apps/mobile"],
+  "packages": [
+    "apps/web",
+    "apps/mobile"
+  ],
   "version": "independent"
 }
