--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,7 +35,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.12.1",
-    "eslint-plugin-react": "^7.21.5"
+    "eslint": "^7.11.0"
   }
 }
