--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "fontsource-roboto": "^3.0.3",
     "formik": "^2.2.1",
     "i18next": "^19.8.3",
     "react": "^17.0.1",
