--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.7.3",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.29.3"
