fix: fix paths to be absolute (#1)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "eslint.workingDirectories": [
     "apps/mobile",
     "apps/web"
-  ]
+  ],
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "javascript.preferences.importModuleSpecifier": "non-relative"
 }
