--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "react-input-mask": "^3.0.0-alpha.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "tiny-invariant": "^1.1.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.29.3"
   },
