--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "eslint.workingDirectories": [
     "apps/mobile",
-    "apps/web"
+    "apps/web-client"
   ],
   "javascript.updateImportsOnFileMove.enabled": "always",
   "javascript.preferences.importModuleSpecifier": "non-relative"
