--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,8 +18,10 @@
     "react-dom": "^17.0.1",
     "react-i18next": "^11.7.3",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-query": "^2.26.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-use": "^15.3.4",
     "tiny-invariant": "^1.1.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.29.3"
